class note for chapter 7 Yechan Ryu

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<title>Door County Wildflowers</title>
 	<meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-wideth, initial=scale=1.0">
+    <link rel="stylesheet" href="style.css" media="screen">
+    <link rel="stylesheet" href="styleprint.css" media="print">
 </head>
 <body>
 <div id="container">
